<resources>
    <string name="app_name">Popdeem-SDK-Android</string>
    <string name="pd_home_title">Rewards</string>
    <string name="pd_empty_string" />
    <string name="pd_common_please_wait_text">Please wait</string>
    <string name="pd_common_sorry_text">Sorry</string>
    <string name="pd_common_oops_text">Oops!</string>
    <string name="pd_common_something_wrong_text">Something went wrong. Please try again later.</string>
    <string name="pd_common_logout_text">Logout</string>
    <string name="pd_common_next_text">Next</string>
    <string name="pd_common_logout_message_text">Are you sure you want to log out?</string>
    <string name="pd_common_facebook_login_cancelled_title_text">Login Cancelled</string>
    <string name="pd_common_facebook_login_cancelled_message_text">You may browse the app before connecting your Facebook, but you must log in with Facebook to avail of social rewards.</string>
    <string name="pd_social_login_success_text">Connected!</string>
    <string name="pd_social_login_success_description_text">Rewards are now unlocked. You will be notified when new rewards are available.</string>
    <string name="pd_social_login_heading_text">Connect your Facebook to earn additional Rewards</string>
    <string name="pd_social_login_body_text">Connect your social account to turn social features on. This will give you access to exclusive content and new social rewards.</string>
    <string name="pd_social_login_footer_text">Powered by Popdeem</string>
    <string name="pd_social_login_continue_text">Continue to app</string>
    <string name="pd_social_login_tagline_text">New: Social Rewards</string>
    <string name="pd_social_login_terms_text">By signing in with Facebook you accept the terms of our privacy policy.</string>
    <string name="pd_profile_bronze_ambassador">\uD83E\uDD49\nBronze\nAmbassador</string>
    <string name="pd_profile_silver_ambassador">\uD83E\uDD48\nSilver\nAmbassador</string>
    <string name="pd_profile_gold_ambassador">\uD83E\uDD47\nGold\nAmbassador</string>
    <string name="pd_profile_connect_text">Connect Social Media Accounts</string>
    <string name="pd_profile_messages_text">Messages</string>
    <string name="pd_profile_history_text">MY HISTORY</string>
    <string name="pd_home_banner_text">Share your #RibsandBurgers experience on social networks to earn more rewards.</string>
    <string name="pd_settings_social_networks_heading_text">SOCIAL NETWORKS</string>
    <string name="pd_social_connect_connecting_button_text">Connecting…</string>
    <string name="pd_rewards_not_available_text">There are no rewards available right now\nPlease check back later.</string>
    <string name="pd_rewards_title">Rewards</string>
    <string name="pd_activity_title">Activity</string>
    <string name="pd_wallet_title">Profile</string>
    <string-array name="home_flow_tab_titles">
        <item>@string/pd_rewards_title</item>
        <item>@string/pd_activity_title</item>
        <item>@string/pd_wallet_title</item>
    </string-array>
    <string name="pd_claim_title">Claim</string>
    <string name="pd_claim_get_reward_text">Continue</string>
    <string name="pd_claim_get_already_shared_text">I\'ve already shared with %s</string>
    <string name="pd_claim_already_shared_default">I\'ve already shared</string>
    <string name="pd_claim_verify_location_failed_title_text">Not at location</string>
    <string name="pd_claim_verify_location_failed_text">You must be at this location to claim this reward.\nPlease come back later.</string>
    <string name="pd_claim_verify_location_off_text">You must be at this location and location services must be enabled to claim this reward.</string>
    <string name="pd_claim_verify_location_permission_text">You must be at this location and location permission must be given to claim this reward.</string>
    <string name="pd_claim_scan_for_already_shared_text" >Scan for already shared photo</string>
    <string name="pd_claim_scan_for_already_shared_sign_in_text" >Scan for an existing check-in</string>
    <string name="pd_claim_scan_for_already_shared_activity_text" >Scan for already shared activity</string>
    <string name="pd_claim_message_placeholder_text">What are you up to?</string>
    <string name="pd_claim_cannot_deselect_text">Cannot Deselect</string>
    <string name="pd_claim_facebook_forced_message_string">This reward must be claimed with a Facebook post. You can also post to Twitter if you wish.</string>
    <string name="pd_claim_twitter_forced_message_string">This reward must be claimed with a Twitter post. You can also post to Facebook if you wish.</string>
    <string name="pd_claim_reward_claimed_text">Reward Claimed!</string>
    <string name="pd_claim_sweepstakes_claimed_success_text">Congratulations! You have been entered into the competition.</string>
    <string name="pd_claim_reward_claimed_success_text">Congratulations! You have unlocked your reward.</string>
    <string name="pd_claim_claiming_reward_text">Claiming your reward</string>
    <string name="pd_claim_tweet_too_long_text">You are over the character limit for Twitter. Please edit your message.</string>
    <string name="pd_claim_no_network_selected_title_text">No Network Selected</string>
    <string name="pd_claim_no_network_selected_message_text">You must select at least one social network in order to complete this action</string>
    <string name="pd_claim_photo_required_text">Photo Required</string>
    <string name="pd_claim_photo_required_message_text">A photo is required for this action. Please add a photo</string>
    <string name="pd_claim_action_tweet_checkin">Check-in or Tweet Required</string>
    <string name="pd_claim_action_photo">Photo required</string>
    <string name="pd_claim_action_photo_camera">📸 Photo Required</string>
    <string name="pd_claim_action_none">No Action Required</string>
    <string name="pd_claim_action_social_login">Social Login</string>
    <string name="pd_claim_action_checkin">📍 Check-in Required</string>
    <string name="pd_claim_action_tweet">Tweet Required</string>
    <string name="pd_claim_action_tweet_photo">Tweet with Photo Required</string>
    <string name="pd_add_text">Add</string>
    <string name="pd_go_to_wallet_text">Go to Wallet</string>
    <string name="pd_ok">OK</string>
    <string name="pd_claim_connect_instagram_title">Connect Instagram</string>
    <string name="pd_claim_required_hashtag_not_present_message_text">Looks like you have forgotten to add the required hashtag %1$s, please add this to your message before posting to %2$s</string>
    <string name="pd_claim_required_hashtag_text">%1s Required</string>
    <string name="pd_claim_add_photo_title_text">Add Photo</string>
    <string name="pd_claim_add_photo_gallery_text">Gallery</string>
    <string name="pd_claim_add_photo_camera_text">Camera</string>
    <string-array name="pd_claim_add_photo_dialog_items_array">
        <item>@string/pd_claim_add_photo_gallery_text</item>
        <item>@string/pd_claim_add_photo_camera_text</item>
    </string-array>
    <string name="pd_claim_choose_friends_title">Choose Friends</string>
    <string name="pd_claim_choose_friends_search_text">Search</string>
    <string name="pd_inbox_title">Inbox</string>
    <string name="pd_inbox_message_sender_tag_text">Sender:</string>
    <string name="pd_inbox_message_date_tag_text">Date:</string>
    <string name="pd_inbox_message_body_tag_text">Body:</string>
    <string name="pd_inbox_message_title_tag_text">Title:</string>
    <string name="pd_inbox_no_messages_text">You have no messages right now…</string>
    <string name="pd_wallet_no_items_text">There is nothing in your history right now.\nPlease check back later.</string>
    <string name="pd_wallet_sweepstake_redeem_text">You will be notified if you are the winner.</string>
    <string name="pd_wallet_credit_reward_text">was added to your account on</string>
    <string name="pd_wallet_recurs_monthly">Draw takes place monthly.</string>
    <string name="pd_wallet_recurs_day">Draw takes place on</string>
    <string name="pd_wallet_coupon_info_message_text">Are you sure you want to redeem this now?</string>
    <string name="pd_redeem_sweepstake_reward_info_title_string">Sweepstake Reward</string>
    <string name="pd_redeem_sweepstake_reward_info_message_string">- You are now in the draw.\n\n- You will be notified if you are the winner.</string>
    <string name="pd_redeem_sweepstake_reward_no_date_message_string">\n\n- There is no date set for this draw.</string>
    <string name="pd_draw_takes_place_in_string">Draw takes place in</string>
    <string name="pd_wallet_verify_button_text">Verify</string>
    <string name="pd_wallet_reward_must_be_verified_text">This reward must be verified.</string>
    <string name="pd_wallet_sweepstake_must_be_verified_text">This reward must be verified.</string>
    <string name="pd_wallet_redeem_text">Redeem this reward now by tapping here</string>
    <string name="pd_wallet_sweepstakes_text">You have been entered into the draw.</string>
    <string name="pd_feed_no_items_text">There is nothing in the feed right now.\nPlease check back later.</string>
    <string name="pd_redeem_title">Redeem</string>
    <string name="pd_redeem_done_alert_title_text">Have you redeemed your reward?</string>
    <string name="pd_redeem_done_alert_body_text">You will not be able to redeem your reward after leaving this screen</string>
    <string name="pd_redeem_timer_finished_text">Timer Finished</string>
    <string name="pd_are_you_sure_string">Are you sure?</string>
    <string name="pd_redeem_button_string">Redeem</string>
    <string name="pd_redeem_reward_info_title_string">Redeem Reward Now?</string>
    <string name="pd_redeem_info_text">Share this screen at the location\nbefore the timer runs out</string>
    <string name="pd_redeem_done_text">Done</string>
    <string name="pd_notification_go_button_text">GO</string>
    <string name="pd_location_disabled_title_text">Location Disabled</string>
    <string name="pd_location_disabled_message_text">Location Services need to be enabled to continue. We use your location to deliver local rewards. Would you like to be taken Location Settings?</string>
    <string name="pd_scan_facebook">Scan Facebook</string>
    <string name="pd_scan_twitter">Scan Twitter</string>
    <string name="pd_scan_instagram">Scan Instagram</string>
    <string name="pd_scan_title_label">Choose what network you shared your experience with %s to claim your reward:</string>
    <string name="pd_scan_note">Note: You must have shared your experience with %s in the last 48 hours in order to be eligible for a reward.</string>
    <string name="pd_scan_success_label">Hey %1$s, we found your post with %2$s. Thanks for sharing, you have unlocked your reward!</string>
    <string name="pd_scan_fail_label">Whoops! Sorry %1$s, we could not find any posts on %2$s from the last 48 hours with %3$s. </string>
    <string name="pd_scan_fail_detail_label">Please ensure you\'ve shared from the correct social media account and try again</string>
    <string name="pd_scan_success_user_name">Dave Hannan</string>
    <string name="pd_claim_text">Claim Reward</string>
    <string name="pd_back_to_reward">Back to Reward</string>
    <string name="pd_gratitude_thanks_text">Thanks for sharing. You earned an additional %s points to your account and moved up in status</string>
    <string name="pd_gratitude_thanks_for_connecting">Welcome</string>
    <string name="pd_gratitude_unlock_offers_text">Unlock new rewards and VIP offers as you move up in status.</string>
    <string name="pd_gratitude_go_to_profile_button">Continue</string>
    <string name="pd_instagram_permission">Instagram Permissions</string>
    <string name="pd_instagram_permission_description">Please ensure you give the following permissions to avail of Social Rewards</string>
    <string name="btn_continue">Continue</string>
</resources>