<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="16dp">

    <TextView
        android:id="@+id/pd_scan_label_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pd_scan_fail_label"
        android:gravity="center"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pd_scan_fail_detail_label"
        android:gravity="center"
        android:padding="16dp"/>


    <Button
        android:id="@+id/btn_return_fail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pd_back_to_reward"
        android:textAllCaps="false"
        android:textColor="@color/pd_claim_share_button_background_color"
        android:background="@null"/>

</LinearLayout>