<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/pd_instagram_permission"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center"
        android:text="@string/pd_instagram_permission_description"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/pd_alert_dialog_imageview"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/pduikit_instagram_permissions" />

    <Button
        android:id="@+id/pd_instagram_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/pd_instagram_red"
        android:text="@string/btn_continue"
        android:textColor="#fff"
        android:textAllCaps="false"/>

</LinearLayout>