<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/pd_success_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/pd_scan_success_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/pd_rounded_background"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <com.popdeem.sdk.uikit.widget.PDUIBezelImageView
                android:id="@+id/pd_scan_success_user_image_view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:maskDrawable="@drawable/circle_mask"
                tools:src="@drawable/pd_ui_default_user" />

            <TextView
                android:id="@+id/pd_social_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/pd_scan_success_user_name" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_media_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_claim"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/pd_claim_share_button_background_color"
            android:text="@string/pd_claim_text"
            android:textColor="@color/pd_claim_share_button_text_color"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/pd_back_to_reward"
            android:textAllCaps="false"
            android:textColor="@color/pd_claim_share_button_background_color"
            android:background="@null"/>

    </LinearLayout>

</LinearLayout>