<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Popdeem
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".uikit.activity.PDUISelectNetworkActivity">

    <include layout="@layout/pd_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_scan_title_label"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/pd_rounded_facebook"
                android:layout_marginBottom="8dp"
                android:text="@string/pd_scan_facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/pd_rounded_twitter"
                android:layout_marginBottom="8dp"
                android:text="@string/pd_scan_twitter"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_instagram"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/pd_insta_button"
                android:layout_marginBottom="8dp"
                android:text="@string/pd_scan_instagram"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/note_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_scan_note"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>