<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <TextView
            android:clickable="true"
            android:id="@+id/tv_bronze"
            android:gravity="center"
            android:text="@string/pd_profile_bronze_ambassador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_silver"
            android:gravity="center"
            android:text="@string/pd_profile_silver_ambassador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_gold"
            android:gravity="center"
            android:text="@string/pd_profile_gold_ambassador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="25dp">

        <FrameLayout
            android:id="@+id/fl_frame"
            android:background="@drawable/pd_progress_backing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/fl_filler"
            android:background="@drawable/pd_progress_front_view"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
    </FrameLayout>

</LinearLayout>