<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pd_gratitude_bg"
    android:fitsSystemWindows="true">


    <FrameLayout
        android:background="@color/pd_gratitude_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_marginTop="46dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="10dp"/>
            <ImageView
                android:adjustViewBounds="true"
                android:src="@drawable/ambassador_icon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/pd_iv_ambassador_icon" />
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/pd_gratitude_profile_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_1">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15" />
            <TextView
                android:textStyle="bold"
                android:id="@+id/pd_gratitude_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pd_gratitude_thanks_for_connecting"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/pd_gratitude_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="3"
                    android:text="@string/pd_gratitude_thanks_text"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </FrameLayout>
            <com.popdeem.sdk.uikit.widget.PDAmbassadorView
                android:id="@+id/pd_gratitude_ambassador_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/pd_gratitude_description_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="3"
                android:text="@string/pd_gratitude_unlock_offers_text"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />
        </LinearLayout>

        <Button
            android:text="@string/pd_gratitude_go_to_profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:minHeight="40dp"
            android:background="@drawable/pd_button_rounded_rect_primary"
            android:textColor="@color/pd_toolbar_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/pd_gratitude_profile_button" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>